# simupod

./: README.md  pyproject.toml
photonhub/: __init__.py  capabilities.py  cost.py  data.py  gds.py  hdf5.py  inverse_design.py  library.py  schema.py
photonhub/components/: __init__.py  medium.py  run.py  simulation.py  sources.py
photonhub/plugins/: __init__.py  cvcs.py  eme.py  mode_devices.py  mode_overlap.py  mode_tracking.py  modes.py  near_field.py  smatrix.py  vector_modes.py
photonhub/runners/: batch.py  local.py
photonhub/viz/: __init__.py  _geometry.py  _style.py  eps.py  field.py  mode.py  scene.py  spectrum.py
photonhub/web/: __init__.py  (+4 more)
simupod/: __init__.py  _env.py  capabilities.py  cost.py  data.py  gds.py  hdf5.py  inverse_design.py  library.py  schema.py
tests/: conftest.py  test_absorber.py  test_acceptance_gate.py  test_automesh.py  test_batch.py  test_capabilities.py  test_components_scoring.py  test_cost.py  test_cvcs.py  test_data.py  test_eme.py  test_gds.py  test_geometry.py  test_graded_grid.py  test_hdf5.py  test_interval_space.py  test_inverse_design.py  test_library.py  test_material_boundaries.py  test_mode_devices.py  test_mode_overlap.py  test_mode_source_broadband.py  test_mode_source_vector.py  test_mode_tracking.py  test_models.py  test_modes_by_freq.py  test_modesolver.py  test_multimode_monitor.py  test_near_field.py  test_progress.py  test_roundtrip.py  test_run_local.py  test_schema.py  test_smatrix.py  test_source_time_tuning.py  test_subpixel.py  test_symmetry.py  test_vector_modesolver.py  test_viz.py  test_web.py
(+41 files in other folders)
