[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simupod"
version = "0.0.1"
description = "Python client for the PhotonHub GPU FDTD photonics solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "numpy",
    "scipy",
    "xarray",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest", "plotly", "ipywidgets"]   # so the full viz suite runs in CI, not skips
viz = ["plotly", "ipywidgets"]              # plotly = 3D; ipywidgets = interactive_preview

[tool.hatch.build.targets.wheel]
packages = ["simupod"]

[tool.pytest.ini_options]
testpaths = ["tests"]
